--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:4000",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -6,6 +7,8 @@
     "cra-template": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.8.2",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1"
   },
   "scripts": {
